force-app/main/default/objects/PricebookEntry/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Date from which this pricebook entry is effective. Used by the nightly expiry flow to manage price validity windows.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>