force-app/main/default/objects/PricebookEntry/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Date after which this pricebook entry expires. The nightly PricebookEntry_Scheduled_Expiry flow deactivates entries past this date.</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>