force-app/main/default/objects/PricebookEntry/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Unique external identifier for pricebook entry data sync. Composed of pricebook + product + variant key. Used as upsert key for price imports from Odoo.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>